@@ -12,6 +12,7 @@ zeit.content.article changes
   and renamed to the name given during editing the checked out article (#8080).
 - Enable UI for author references (#7441, #7333).
 
+- Remove <p>, <intertitle> etc. from the module library (#9923).
 
 2.9.1 (2010-08-09)
 ------------------
